--- a/tonghop.html
+++ b/tonghop.html
@@ -93,11 +93,15 @@ document.write(Playlist[random]);
 </div>
 
 <div class="gallery">
-  <a rel="nofollow" href="https://by.com.vn/GitTL01">
+  <a href="https://by.com.vn/GitTL01" data-ved="" ping="/url?sa=t&amp;source=web&amp;rct=j&amp;url=https://by.com.vn/GitTL01">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjK1jwAIIcNp0GpnObRNnPKfN00Hz7K5BHdOazu6zOJ1lNwVixQ4nzuwJGEgNOozhthbweURK_85R5bkeWSTkj_U9B0_yjztfwMRCgFzZL1Kg3VcBaKk2I6ac1DLHtFvvm86XmQT8cv0S02cCh1GBUHqy80uX1Dey4X9bCjl9F7KDD1BU1rm8Ba5lM3/s400/19.jpg">
   </a>
 </div>
 
+  
+
+  
+  
 </div>
 
 </body>
