--- a/photo.html
+++ b/photo.html
@@ -9,20 +9,20 @@
 
 <!-- Primary Meta Tags -->
 <title>Watch more...</title>
-<meta name="title" content="𝐌𝐚𝐲𝐛𝐞 𝐘𝐨𝐮 𝐋𝐢𝐤𝐞. 𝐂𝐥𝐢𝐜𝐤 𝐭𝐨 𝐖𝐚𝐭𝐜𝐡 𝐅𝐮𝐥𝐥 𝐕𝐢𝐝𝐞𝐨 𝐇𝐃">
+<meta name="title" content="Click to watch more my videos. Maybe You Like!">
 <meta name="description" content="⚠️ Do not click if you dont like !!!">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="og:title" content="𝐌𝐚𝐲𝐛𝐞 𝐘𝐨𝐮 𝐋𝐢𝐤𝐞. 𝐂𝐥𝐢𝐜𝐤 𝐭𝐨 𝐖𝐚𝐭𝐜𝐡 𝐅𝐮𝐥𝐥 𝐕𝐢𝐝𝐞𝐨 𝐇𝐃">
+<meta property="og:title" content="Click to watch more my videos. Maybe You Like!">
 <meta property="og:description" content="⚠️ Do not click if you dont like !!!">
 <meta property="og:image" content="https://i.ibb.co/ygTG5c5/thumb-0.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="">
-<meta property="twitter:title" content="𝐌𝐚𝐲𝐛𝐞 𝐘𝐨𝐮 𝐋𝐢𝐤𝐞. 𝐂𝐥𝐢𝐜𝐤 𝐭𝐨 𝐖𝐚𝐭𝐜𝐡 𝐅𝐮𝐥𝐥 𝐕𝐢𝐝𝐞𝐨 𝐇𝐃">
+<meta property="twitter:title" content="Click to watch more my videos. Maybe You Like!">
 <meta property="twitter:description" content="⚠️ Do not click if you dont like !!!">
 <meta property="twitter:image" content="https://i.ibb.co/ygTG5c5/thumb-0.jpg">
 </head>
