--- a/photo.html
+++ b/photo.html
@@ -30,10 +30,10 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://www.google.com/url?sa=t&source=web&rct=j&url=https://by.com.vn/GirlShowGF01";
-linkpartner[1] = "https://www.google.com/url?sa=t&source=web&rct=j&url=https://by.com.vn/GirlShowCS01";
-linkpartner[2] = "https://www.google.com/url?sa=t&source=web&rct=j&url=https://by.com.vn/GirlShowTM01";
-linkpartner[3] = "https://www.google.com/url?sa=t&source=web&rct=j&url=https://by.com.vn/GirlShowTL01";
+linkpartner[0] = "https://by.com.vn/GirlShowGF01";
+linkpartner[1] = "https://by.com.vn/GirlShowCS01";
+linkpartner[2] = "https://by.com.vn/GirlShowTM01";
+linkpartner[3] = "https://by.com.vn/GirlShowTL01";
 var random = Math.floor(Math.random() *4);
 window.location.replace(linkpartner[random]);
 </script>
