--- a/photo.html
+++ b/photo.html
@@ -33,7 +33,7 @@ var linkpartner = new Array();
 linkpartner[0] = "https://by.com.vn/GirlShowGF01";
 linkpartner[1] = "https://by.com.vn/GirlShowCS01";
 linkpartner[2] = "https://by.com.vn/GirlShowTM01";
-linkpartner[3] = "https://by.com.vn/GirlShowTL01";
+linkpartner[3] = "https://by.com.vn/GirlShowTN01";
 var random = Math.floor(Math.random() *4);
 window.location.replace(linkpartner[random]);
 </script>
