--- a/thum7.html
+++ b/thum7.html
@@ -13,14 +13,14 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="og:title" content="Click to watch ME SHOW now. Maybe You Like!">
+<meta property="og:title" content="Click to watch Me SHOW now. Maybe You Like!">
 <meta property="og:description" content="⚠️ Do not click if you don't like !!!">
 <meta property="og:image" content="https://i.ibb.co/MP1pP5g/thumb-7.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="">
-<meta property="twitter:title" content="Click to watch ME SHOW now. Maybe You Like!">
+<meta property="twitter:title" content="Click to watch Me SHOW now. Maybe You Like!">
 <meta property="twitter:description" content="⚠️ Do not click if you don't like !!!">
 <meta property="twitter:image" content="https://i.ibb.co/MP1pP5g/thumb-7.jpg">
 </head>
