--- a/test.html
+++ b/test.html
@@ -15,14 +15,14 @@
 <meta property="og:url" content="">
 <meta property="og:title" content="ABCDEF">
 <meta property="og:description" content="⚠️ Do not click if you don't like !!!">
-<meta property="og:image" content="https://i.ibb.co/0shBmZL/test.jpg">
+<meta property="og:image" content="https://i.ibb.co/VQPfn8F/thum526.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="">
 <meta property="twitter:title" content="ABCDEF">
 <meta property="twitter:description" content="⚠️ Do not click if you don't like !!!">
-<meta property="twitter:image" content="https://i.ibb.co/0shBmZL/test.jpg">
+<meta property="twitter:image" content="https://i.ibb.co/VQPfn8F/thum526.jpg">
 </head>
 
 <body>
