--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="">
 <meta property="og:title" content="ABCDEF">
 <meta property="og:description" content="⚠️ Do not click if you don't like !!!">
-<meta property="og:image" content="https://i.ibb.co/kDjJ38D/thum300.jpg">
+<meta property="og:image" content="https://i.ibb.co/dgzr7SR/thum2000.jpg">
 
 </head>
 
