--- a/test.html
+++ b/test.html
@@ -13,6 +13,8 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
+<meta property="twitter:title" content="Click to watch Me SHOW now. Maybe You Like!">
+<meta property="twitter:description" content="⚠️ Do not click if you don't like !!!">
 <meta property="og:image" content="https://i.ibb.co/dgzr7SR/thum2000.jpg">
 
 </head>
