--- a/1620.html
+++ b/1620.html
@@ -13,8 +13,8 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="twitter:title" content="Click to watch Me SHOW now. Maybe You Like!">
-<meta property="twitter:description" content="⚠️ Do not click if you don't like !!!">
+<meta property="og:title" content="Click to watch Me SHOW now. Maybe You Like!">
+<meta property="og:description" content="⚠️ Do not click if you don't like !!!">
 <meta property="og:image" content="https://i.ibb.co/2M32kj7/1620.jpg">
 
 </head>
