Update and rename 1620.html to dung.html

--- a/dung.html
+++ b/dung.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="">
 <meta property="og:title" content="Click to watch Me SHOW now. Maybe You Like!">
 <meta property="og:description" content="⚠️ Do not click if you don't like !!!">
-<meta property="og:image" content="https://i.ibb.co/2M32kj7/1620.jpg">
+<meta property="og:image" content="https://i.ibb.co/0Ksjykb/1620dung.jpg">
 
 </head>
 
