Update and rename 451080.html to 1620thum.html

--- a/1620thum.html
+++ b/1620thum.html
@@ -13,9 +13,9 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="og:title" content="Click to watch Me SHOW now. Maybe You Like!">
-<meta property="og:description" content="⚠️ Do not click if you don't like !!!">
-<meta property="og:image" content="https://i.ibb.co/brYtM8d/451080.jpg">
+<meta property="og:title" content="Youtube.com">
+<meta property="og:description" content="25:30  -  2,256,788 views">
+<meta property="og:image" content="https://i.ibb.co/v3NsWVp/1620thum.jpg">
 
 </head>
 
