--- a/photo.html
+++ b/photo.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-243944443-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-243944443-1');
+</script>
+  
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="googlebot" content="noarchive"/>
 <meta content="noindex, nofollow" name="robots"/>
