--- a/photo.html
+++ b/photo.html
@@ -19,7 +19,7 @@
 <meta property="og:site_name" content="28:40 - 2.635.548 views" />
 
 <!-- Primary Meta Tags -->
-<title>Watch more about me...</title>
+<title>Photo is Loading...</title>
 <meta name="title" content="Click to watch more my videos. Maybe You Like !!!">
 <meta name="description" content="⚠️ Do not click if you don't like !!!">
 
