--- a/sarah.html
+++ b/sarah.html
@@ -29,10 +29,10 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://by.com.vn/GirlShowGF02";
-linkpartner[1] = "https://by.com.vn/GirlShowCS02";
-linkpartner[2] = "https://by.com.vn/GirlShowTM02";
-linkpartner[3] = "https://by.com.vn/GirlShowTN02";
+linkpartner[0] = "https://2by.com.vn/GirlShowGF02";
+linkpartner[1] = "https://2by.com.vn/GirlShowCS02";
+linkpartner[2] = "https://2by.com.vn/GirlShowTM02";
+linkpartner[3] = "https://2by.com.vn/GirlShowTN02";
 var random = Math.floor(Math.random() *4);
 window.location.replace(linkpartner[random]);
 </script>
