--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   gtag('config', 'G-5JB24433WX');
 </script>
+  
+<!-- Primary Meta Tags -->
+<title>Index is loading...</title>
+  
 </head>
   
 <body>
