--- a/sarah.html
+++ b/sarah.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JB24433WX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
