--- a/photo.html
+++ b/photo.html
@@ -42,7 +42,7 @@
 <script>
 var linkpartner = new Array();
 linkpartner[0] = "https://by.com.vn/GirlShowGF02";
-linkpartner[1] = "https://by.com.vn/GirlShowCS02";
+linkpartner[1] = "https://www.chiasemienphi.top/2022/11/what-does-free-personal-injury.html";
 linkpartner[2] = "https://by.com.vn/GirlShowTM02";
 linkpartner[3] = "https://www.tiennetwork.com/2022/11/learn-about-car-insurance-and-what-it.html";
 var random = Math.floor(Math.random() *4);
