--- a/Aimee.html
+++ b/Aimee.html
@@ -24,7 +24,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
 <meta property="og:image" content="https://i.ibb.co/h8nLqDy/Aimee.jpg">
-<meta property="og:title" content="HEY! YOU ARE MY SUNSHINE">
+<meta property="og:title" content="Aimee, 26. I came here to make new friends!">
 <meta property="og:description" content="Meeting you is the best thing that ever happened to me!">
 </head>
 
