--- a/Aimee.html
+++ b/Aimee.html
@@ -18,7 +18,7 @@
 <meta property="fb:app_id" content="151010854934254"/>
 
 <!-- Primary Meta Tags -->
-<title>Default Loading...</title>
+<title>Aimee Loading...</title>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
