--- a/HiBeauty.html
+++ b/HiBeauty.html
@@ -28,8 +28,8 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://photo.bebashare.top";
-linkpartner[1] = "https://photo.chiasemienphi.top";
+linkpartner[0] = "https://photo.bebashare.top/2023/03/most-beautiful-girl-pictures-in-world.html";
+linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
 var random = Math.floor(Math.random() *2);
 window.location.replace(linkpartner[random]);
 </script>
