--- a/HiBeauty.html
+++ b/HiBeauty.html
@@ -28,9 +28,10 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://photo.bebashare.top/2023/03/most-beautiful-girl-pictures-in-world.html";
+linkpartner[0] = "https://www.bebashare.top/2023/04/blog-post-09.html";
 linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
-var random = Math.floor(Math.random() *2);
+linkpartner[2] = "https://www.sharehay.top";
+var random = Math.floor(Math.random() *3);
 window.location.replace(linkpartner[random]);
 </script>
 </body>
