--- a/HiBeauty.html
+++ b/HiBeauty.html
@@ -30,7 +30,7 @@
 var linkpartner = new Array();
 linkpartner[0] = "https://www.bebashare.top/2023/04/blog-post-09.html";
 linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
-linkpartner[2] = "https://www.sharehay.top";
+linkpartner[2] = "https://www.sharehay.top/2022/12/nhung-kieu-nguoi-khong-nen-cho-vay-tien.html";
 var random = Math.floor(Math.random() *3);
 window.location.replace(linkpartner[random]);
 </script>
