--- a/HiBeauty.html
+++ b/HiBeauty.html
@@ -29,9 +29,12 @@
 <script>
 var linkpartner = new Array();
 linkpartner[0] = "https://www.bebashare.top/2023/04/blog-post-09.html";
-linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
-linkpartner[2] = "https://www.sharehay.top/2022/12/nhung-kieu-nguoi-khong-nen-cho-vay-tien.html";
-var random = Math.floor(Math.random() *3);
+linkpartner[1] = "https://www.bebashare.top/2023/04/blog-post-03.html";
+linkpartner[2] = "https://www.bebashare.top/2023/04/blog-post-06.html";
+linkpartner[3] = "https://www.bebashare.top/2023/04/blog-post-08.html";
+linkpartner[4] = "https://www.bebashare.top/2023/04/blog-post-05.html";
+linkpartner[5] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
+var random = Math.floor(Math.random() *6);
 window.location.replace(linkpartner[random]);
 </script>
 </body>
