--- a/MeoMeo102.html
+++ b/MeoMeo102.html
@@ -29,7 +29,7 @@
 <script>
 var linkpartner = new Array();
 linkpartner[0] = "https://blog.getfiles.top/2022/10/what-is-personal-loan.html?tienurl=eyJ1cmwiOiJodHRwczovL3d3dy5nb29nbGUuY29tL3NlYXJjaD9xPURWUlQtMDEwIn0%3D";
-linkpartner[1] = "https://blog.chiasemienphi.top/2023/02/best-financial-management-softwares.html";
+linkpartner[1] = "https://blog.chiasemienphi.top/2023/02/best-financial-management-softwares.html?tienurl=eyJ1cmwiOiJodHRwczovL3d3dy5nb29nbGUuY29tL3NlYXJjaD9xPURWUlQtMDEwIn0%3D";
 var random = Math.floor(Math.random() *2);
 window.location.replace(linkpartner[random]);
 </script>
