--- a/MeoMeo102.html
+++ b/MeoMeo102.html
@@ -29,7 +29,7 @@
 <script>
 var linkpartner = new Array();
 linkpartner[0] = "https://blog.getfiles.top/2022/10/what-is-personal-loan.html?tienurl=eyJ1cmwiOiJodHRwczovL3d3dy50aWVubmV0d29yay5jb20vIn0%3D";
-linkpartner[1] = "https://blog.chiasemienphi.top/2023/02/best-financial-management-softwares.html?tienurl=eyJ1cmwiOiJodHRwczovL3d3dy50aWVubmV0d29yay5jb20vIn0%3D";
+linkpartner[1] = "https://photo.chiasemienphi.top/2023/04/best-financial-management-software-and.html";
 var random = Math.floor(Math.random() *2);
 window.location.replace(linkpartner[random]);
 </script>
