--- a/MeoLive102.html
+++ b/MeoLive102.html
@@ -18,7 +18,7 @@
 <meta property="fb:app_id" content="151010854934254"/>
 
 <!-- Primary Meta Tags -->
-<title>MEOMEO-102 Loading...</title>
+<title>MEOLIVE-102 Loading...</title>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -29,17 +29,8 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
-linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
-linkpartner[2] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
-linkpartner[3] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
-linkpartner[4] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
-linkpartner[5] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
-linkpartner[6] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
-linkpartner[7] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
-linkpartner[8] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
-linkpartner[9] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
-var random = Math.floor(Math.random() *10);
+linkpartner[0] = "https://tinyurl.com/MeoLive278"; // Photo.CSMP
+var random = Math.floor(Math.random() *1);
 window.location.replace(linkpartner[random]);
 </script>
 </body>
