--- a/MeoLive102.html
+++ b/MeoLive102.html
@@ -29,7 +29,7 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://tinyurl.com/MeoLive278"; // Photo.CSMP
+linkpartner[0] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p1.html"; // Photo.CSMP
 var random = Math.floor(Math.random() *1);
 window.location.replace(linkpartner[random]);
 </script>
