--- a/Amelia.html
+++ b/Amelia.html
@@ -31,11 +31,17 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://blog.getfiles.top/2022/10/what-is-insurance-quote.html";
-linkpartner[1] = "https://www.chiasemienphi.top/2022/11/what-does-free-personal-injury.html";
-linkpartner[2] = "https://www.tienmobile.top/2022/11/what-is-insurance-quote.html";
-linkpartner[3] = "https://www.tiennetwork.com/2022/11/learn-about-car-insurance-and-what-it.html";
-var random = Math.floor(Math.random() *4);
+linkpartner[0] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
+linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
+linkpartner[2] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
+linkpartner[3] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
+linkpartner[4] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
+linkpartner[5] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
+linkpartner[6] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
+linkpartner[7] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
+linkpartner[8] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
+linkpartner[9] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
+var random = Math.floor(Math.random() *10);
 window.location.replace(linkpartner[random]);
 </script>
 </body>
