--- a/Default.html
+++ b/Default.html
@@ -23,7 +23,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="og:image" content="https://i.ibb.co/CP2b20N/pretty.jpg">
+<meta property="og:image" content="https://i.ibb.co/L1xyL4N/A020622.jpg">
 <meta property="og:title" content="HEY! YOU ARE MY SUNSHINE">
 <meta property="og:description" content="Meeting you is the best thing that ever happened to me!">
 </head>
