--- a/MeoMeo102.html
+++ b/MeoMeo102.html
@@ -30,16 +30,16 @@
 <body>
 <script>
 var linkpartner = new Array();
-linkpartner[0] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
-linkpartner[1] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
-linkpartner[2] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
-linkpartner[3] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
-linkpartner[4] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
-linkpartner[5] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
-linkpartner[6] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
-linkpartner[7] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
-linkpartner[8] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
-linkpartner[9] = "https://chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
+linkpartner[0] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p1.html";
+linkpartner[1] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p2.html";
+linkpartner[2] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p3.html";
+linkpartner[3] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p4.html";
+linkpartner[4] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p5.html";
+linkpartner[5] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p6.html";
+linkpartner[6] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p7.html";
+linkpartner[7] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p8.html";
+linkpartner[8] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p9.html";
+linkpartner[9] = "https://blog.chiasevip.top/2023/03/100-beautiful-girl-photos-in-world-p10.html";
 var random = Math.floor(Math.random() *10);
 window.location.replace(linkpartner[random]);
 </script>
